# medical-cli-tui

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
compliance/vendors/: example-ai.toml
crates/med-agent/: Cargo.toml
crates/med-agent/src/: lib.rs  protocol.rs  thread.rs  tools.rs  turn.rs
crates/med-ai/: Cargo.toml
crates/med-ai/src/: lib.rs
crates/med-cli/: Cargo.toml
crates/med-cli/src/: main.rs
crates/med-compliance/: Cargo.toml
crates/med-compliance/src/: lib.rs
crates/med-core/: Cargo.toml
crates/med-core/src/: audit.rs  billing.rs  clinical.rs  ids.rs  lib.rs
crates/med-store/: Cargo.toml
crates/med-store/src/: lib.rs
crates/med-tui/: Cargo.toml
crates/med-tui/src/: app.rs  lib.rs  terminal.rs  theme.rs  ui.rs
crates/med-tui/src/widgets/: context_panel.rs  mod.rs  patient_queue.rs  status_bar.rs  workspace.rs
docs/: AGENT_HARNESS.md  ARCHITECTURE.md  ATTRIBUTION_POLICY.md  BAA_VENDOR_REGISTRY.md  CODEX_EXTRACTION_LOG.md  CODEX_EXTRACTION_PLAN.md  COMPLIANCE.md  MVP_PLAN.md  OPEN_SOURCE_AGENT_REVIEW.md  ROADMAP.md  TUI_DASHBOARD_PLAN.md
docs/codex-inventory/: 00-summary.md  01-core-session-turn-loop.md  02-tool-runtime-and-approval.md
prompts/: README.md
schemas/: README.md
