[package]
name = "med-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
med-ai = { path = "../med-ai" }
med-compliance = { path = "../med-compliance" }
med-core = { path = "../med-core" }
serde.workspace = true
thiserror.workspace = true
time.workspace = true
